# a2a-mcp-mongodb-multiagents

./: README.md  pyproject.toml
common/: langgraph_agent.py  langgraph_agent_executor.py  langgraph_tools.py  session_thread_mapper.py
host_agent/: .env.example  app.py  app_async_fixed.py
host_agent/adk_agent/: .env.example  README.md  agent.py
mcp/: .env.example  __init__.py  main.py
scheduling_agent/: .env.example  main.py
scripts/: kill_ports.sh  start_services.sh
support_agent/: .env.example  agent_executor.py  main.py  test_client.py
